# glasgow-rent-agent

./: .env.example  .gitignore  README.md  RENDER.md  config.yaml  pyproject.toml  render.yaml
src/house_agent/: cli.py  config.py  digest.py  emailer.py  filters.py  models.py  normalise.py  runner.py  storage.py
src/house_agent/sources/: __init__.py  generic.py
tests/: test_filters.py  test_storage.py
