[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glasgow-rent-agent"
version = "0.1.0"
description = "Local house-rental alert agent for furnished Glasgow flats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "google-api-python-client>=2.137.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.1",
  "psycopg[binary]>=3.2.9",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
  "tzdata>=2025.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[project.scripts]
house-agent = "house_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
